--- a/docs/overview/master00-amendment_record.adoc
+++ b/docs/overview/master00-amendment_record.adoc
@@ -4,7 +4,7 @@
 |===
 |Issue|Details|Raiser, Implementer|Completed
 
-4+^h|*PROC Release 2.0.0 (unreleased)*
+4+^h|*PROC Release 1.6.0 (unreleased)*
 
 |[[latest_issue]]0.5.2
 |{spec_tickets}/SPECPROC-45[SPECPROC-45^]. Add Process component Overview document.
@@ -13,7 +13,7 @@
 |[[latest_issue_date]]30 Jan 2021
 
 |0.5.1
-|Improvements due to review.
+|Improvements due to reviews.
 |R Chen, +
  K Salzman, +
  K Lord
