--- a/docs/process_examples/master.adoc
+++ b/docs/process_examples/master.adoc
@@ -61,6 +61,9 @@ include::master05-chemo.adoc[leveloffset=+1]
 include::master06-antenatal.adoc[leveloffset=+1]
 include::master07-cancer_prescribing.adoc[leveloffset=+1]
 include::master08-Covid19_severity.adoc[leveloffset=+1]
+include::master09-cha2ds_vasc.adoc[leveloffset=+1]
+include::master10-qrisk.adoc[leveloffset=+1]
+include::master20-common_DLMs.adoc[leveloffset=+1]
 
 //
 // --------------------------------------------- REFERENCES -----------------------------------------------
