--- a/docs/overview/master.adoc
+++ b/docs/overview/master.adoc
@@ -35,6 +35,7 @@ include::master00-amendment_record.adoc[leveloffset=+1]
 
 === Contributors
 
+* Joost Holslag, MD, Nedap Healthcare & University of Groningen, Netherlands
 * Ken Lord, Principal, MDIXinc, US
 * Keith Salzman MD, CMIO US Army (ret.)
 
