--- a/docs/process_examples/master20-common_DLMs.adoc
+++ b/docs/process_examples/master20-common_DLMs.adoc
@@ -154,14 +154,17 @@ rules -- Main
     |
     weight_in_kg: Real
         Result := choice of 
-            ===============================================================================================
+            =====================================================
             weight.units = "kg":    weight.magnitude,
-            -----------------------------------------------------------------------------------------------
+            -----------------------------------------------------
             weight.units = "lb":    weight.magnitude / 2.2,
-            -----------------------------------------------------------------------------------------------
+            -----------------------------------------------------
             *:                      {Quantity_converter}.
-                                    convert_value (weight.value, from: weight.units, to: "kg", UCUM.[mass])
-            ===============================================================================================
+                                    convert_value (weight.value, 
+                                        from: weight.units,
+                                        to: "kg", 
+                                        UCUM.[mass])
+            =====================================================
         ;
         
     |
@@ -169,14 +172,17 @@ rules -- Main
     |
     height_in_cm: Real
         Result := choice of 
-            ===============================================================================================
+            ====================================================
             height.units = "cm":    height.magnitude,
-            -----------------------------------------------------------------------------------------------
+            ----------------------------------------------------
             height.units = "m":     height.magnitude * 100,
-            -----------------------------------------------------------------------------------------------
+            ----------------------------------------------------
             *:                      {Quantity_converter}.
-                                    convert_value (height.value, from: height.units, to: "cm", UCUM.[length])
-            ===============================================================================================
+                                    convert_value (height.value,
+                                        from: height.units,
+                                        to: "cm",
+                                        UCUM.[length])
+            =====================================================
         ;
         
     |
@@ -253,14 +259,17 @@ rules -- Main
     |
     weight_in_kg: Real
         Result := choice of 
-            ===============================================================================================
+            ====================================================
             weight.units = "kg":    weight.magnitude,
-            -----------------------------------------------------------------------------------------------
+            ----------------------------------------------------
             weight.units = "lb":    weight.magnitude / 2.2,
-            -----------------------------------------------------------------------------------------------
+            ----------------------------------------------------
             *:                      {Quantity_converter}.
-                                    convert_value (weight.value, from: weight.units, to: "kg", UCUM.[mass])
-            ===============================================================================================
+                                    convert_value (weight.value,
+                                        from: weight.units,
+                                        to: "kg",
+                                        UCUM.[mass])
+            ====================================================
         ;
         
     |
@@ -268,14 +277,17 @@ rules -- Main
     |
     height_in_m: Real
         Result := choice of 
-            ===============================================================================================
+            =====================================================
             height.units = "m":     height.magnitude,
-            -----------------------------------------------------------------------------------------------
+            -----------------------------------------------------
             height.units = "cm":    height.magnitude / 100,
-            -----------------------------------------------------------------------------------------------
+            -----------------------------------------------------
             *:                      {Quantity_converter}.
-                                    convert_value (height.value, from: height.units, to: "m", UCUM.[length])
-            ===============================================================================================
+                                    convert_value (height.value,
+                                        from: height.units,
+                                        to: "m",
+                                        UCUM.[length])
+            =====================================================
         ;
         
     |
